# COP5522ProjectTeamGold

./: .gitignore  README.md  fft.c
docs/final-report/: Test Methodology.docx  final report charts and data.xlsx
docs/final-report/latex/: COP5520-project-report.bib  COP5520-project-report.tex
docs/progress report/: COP5520 Progress Report.docx  COP5522 Progress Report.docx  ~$P5520 Progress Report.docx
docs/proposal/: README.md
docs/proposal/latex/: COP5520-project-proposal.tex
docs/proposal/tex/: COP5520-project-proposal.bib
docs/report/: Test Methodology.docx  final report charts and data.xlsx  timings.xlsx
iterative/: CMakeLists.txt  fft.c  fft.h  fft_iterative.c
openmp/: CMakeLists.txt  fft.c  fft.h  fft_openmp.c
serial/: CMakeLists.txt  fft.c  fft.h  fft_serial.c
submission/: video link.txt
submission/fft_iterative/: README.txt  makefile
submission/fft_openMP/: README.txt  fft.c  fft.h  makefile
submission/fft_serial/: README.txt  fft.c  fft_serial.c  makefile
submission_old/: fft.c  fft_iterative.c  fft_serial.c  makefile
